--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "template-react-ts",
-    "description": "A Phaser 3 TypeScript project template that demonstrates React communication and uses Vite for bundling.",
-    "version": "1.1.0",
+    "name": "cinco-vidas",
+    "description": "Cinco Vidas - Juego de cartas de baraja española multijugador",
+    "version": "0.1.0",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/phaserjs/template-react-ts.git"
@@ -21,18 +21,21 @@
         "typescript"
     ],
     "scripts": {
-        "dev": "node log.js dev & vite --config vite/config.dev.mjs",
-        "build": "node log.js build & vite build --config vite/config.prod.mjs",
-        "dev-nolog": "vite --config vite/config.dev.mjs",
-        "build-nolog": "vite build --config vite/config.prod.mjs"
+        "dev": "vite --config vite/config.dev.mjs",
+        "build": "vite build --config vite/config.prod.mjs",
+        "preview": "vite preview --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "colyseus.js": "^0.14.13",
+        "howler": "^2.2.4",
         "phaser": "^3.90.0",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "zustand": "^5.0.11"
     },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
+        "@types/howler": "^2.2.12",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
@@ -40,9 +43,9 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "terser": "^5.28.1",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.26.1",
-        "vite": "^6.3.1",
-        "terser": "^5.28.1"
+        "vite": "^6.3.1"
     }
 }
